add price endpoint
